--- a/web/modules/custom/hello_user/templates/hello-user.html.twig
+++ b/web/modules/custom/hello_user/templates/hello-user.html.twig
@@ -3,7 +3,7 @@
 </div>
 
 <div class="content">
-  Hello {{ content.name }} from Hello User Module!
+  Hello {{ content }} from Hello User Module!
 </div>
 
 <div class="pagination">
