--- a/web/modules/custom/database_api/templates/database-api.html.twig
+++ b/web/modules/custom/database_api/templates/database-api.html.twig
@@ -1,20 +1,44 @@
 <div class="content">
-  <h3>Title of events</h3>
-  {% for item in content.titles %}
-    <div>
-      {{ item }}
-    </div>
-  {% endfor %}
-  <h3>Dates of events</h3>
-  {% for item in content.dates %}
-    <div>
-      {{ item }}
-    </div>
-  {% endfor %}
   <h3>Yearly counts</h3>
-  {% for year, count in content.yearly_counts %}
-    <div>
-      {{ year }}: {{ count }}
-    </div>
-  {% endfor %}
+  <table>
+    <tr>
+      <th>Year</th>
+      <th>Count</th>
+    </tr>
+    {% for year, count in content.yearly_counts %}
+    <tr>
+      <td>{{ year }}</td>
+      <td>{{ count }}</td>
+    </tr>
+    {% endfor %}  
+  </table>
+  
+  <h3>Quaterly counts</h3>
+  <table>
+    <tr>
+      <th>Quarter</th>
+      <th>Count</th>
+    </tr>
+    {% for quarter, count in content.quarterly_counts %}
+      <tr>
+        <td>{{ quarter }}</td>
+        <td>{{ count }}</td>
+      </tr>
+    {% endfor %}
+  </table>
+
+  <h3>Event Type counts</h3>
+  <table>
+    <tr>
+      <th>Event Type</th>
+      <th>Count</th>
+    </tr>
+    {% for type, count in content.type_counts %}
+      <tr>
+        <td>{{ type }}</td>
+        <td>{{ count }}</td>
+      </tr>
+    {% endfor %}
+  </table>
+
 </div>
