FT2023-350: Showing taxonomy term data for second task.

--- a/web/modules/custom/menu_api/css/styles.css
+++ b/web/modules/custom/menu_api/css/styles.css
@@ -1,5 +1,5 @@
 .toolbar-icon.toolbar-icon-menu-api-form::before {
-  background-image: url("http://custom-development.com/modules/custom/menu_api/images/movie-icon.svg");
+  background-image: url("/modules/custom/menu_api/images/movie-icon.svg");
 }
 .toolbar-icon.toolbar-icon-menu-api-form.is-active::before {
   filter: invert(1);
